[package]
name = "youtube-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17.0-rc.1"
futures = "0.3.19"
regex = "1.5.4"
custom_error = "1.9.2"
